<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemMovie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="125dp"
        android:layout_height="160dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="30dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movieTitleItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/movie_title"
        android:textAllCaps="true"
        android:textColor="@color/red_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageItem"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movieDescItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:maxLines="6"
        android:text="@string/movie_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageItem"
        app:layout_constraintTop_toBottomOf="@id/movieTitleItem" />

</androidx.constraintlayout.widget.ConstraintLayout>